--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,7 @@
 
 pipeline {
     agent {
-        docker { image 'node:22.2.0-alpine3.19' }
+        docker { image 'node:22.2.0-alpine' }
     }
 
     stages {
