--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,33 +1,12 @@
-
 pipeline {
     agent {
         docker { image 'node:22.2.0-alpine' }
     }
-
     stages {
-        stage('Install Dependencies') {
+        stage('Test') {
             steps {
-                sh 'npm install'
+                sh 'node --version'
             }
-        }
-
-        stage('Build Application') {
-            steps {
-                sh 'npm run build'
-            }
-        }
-
-        stage('Serve Application') {
-            steps {
-                sh 'npm start &'
-            }
-        }
-    }
-
-    post {
-        always {
-            // Cleanup or additional steps
-            cleanWs()
         }
     }
 }
