--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,6 @@
 pipeline {
     agent {
-        docker { image 'node:22.2.0-alpine' args '-u root:root' // Use root user inside the container }
+        docker { image 'node:22.2.0-alpine' args '-u root:root' }
         
     }
     stages {
