--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,35 @@
+
 pipeline {
     agent {
-        docker { image 'node:22.2.0-alpine' args '-u root:root' }
-        
+        docker {
+            image 'node:22.2.0-alpine' 
+            args '-u root:root' 
+        }
     }
     stages {
-        stage('Test') {
+        stage('Install Dependencies') {
             steps {
-                sh 'node --version'
+                sh 'npm install'
             }
+        }
+
+        stage('Build Application') {
+            steps {
+                sh 'npm run build'
+            }
+        }
+
+        stage('Serve Application') {
+            steps {
+                sh 'npm start &'
+            }
+        }
+    }
+
+    post {
+        always {
+            // Cleanup or additional steps
+            cleanWs()
         }
     }
 }
