--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,6 +8,20 @@ pipeline {
     }
     
     stages {
+        stage('Check and Stop Existing Container') {
+            steps {
+                script {
+                    // Check if a container with the same name is already running
+                    def containerExists = sh(script: "docker ps --filter 'name=${CONTAINER_NAME}' --format '{{.Names}}'", returnStdout: true).toString().trim()
+                    if (containerExists) {
+                        // Stop and remove the existing container
+                        sh "docker stop ${CONTAINER_NAME}"
+                        sh "docker rm ${CONTAINER_NAME}"
+                    }
+                }
+            }
+        }
+        
         stage('Setup Docker Container') {
             steps {
                 script {
@@ -18,6 +32,7 @@ pipeline {
                         docker run -d --name ${CONTAINER_NAME} \
                         -p ${APP_PORT}:3000 \
                         ${DOCKER_IMAGE} \
+                        --restart unless-stopped \
                         sh -c "while true; do sleep 1000; done"
                     """
                     sh "docker exec ${CONTAINER_NAME} ls"
