--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,9 +3,15 @@ pipeline {
 
 
     stages {
-        stage('clear existing image') {
+        stage('clear existing image and container') {
             steps {
-                sh "docker rmi delivery-service"
+                try {
+                    sh "docker rmi delivery-service"
+                    sh "docker rm ${CONTAINER_NAME}"
+
+                } catch (e) {
+                    echo "No existing image or container to remove"
+                }
             }
         }
         stage('build image') {
