--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,13 +5,14 @@ pipeline {
     stages {
         stage('clear existing image and container') {
             steps {
-                try {
-                    sh "docker rmi delivery-service"
-                    sh "docker rm ${CONTAINER_NAME}"
+                def containerExists = sh(script: "docker ps --filter 'name=delivery-service' --format '{{.Names}}'", returnStdout: true).toString().trim()
+                    if (containerExists) {
+                        sh "docker rmi delivery-service"
+                        sh "docker rm delivery-service"
 
-                } catch (e) {
-                    echo "No existing image or container to remove"
-                }
+                    } else {
+                        echo "No existing image or container to remove"
+                    }
             }
         }
         stage('build image') {
