--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,8 @@ pipeline {
             steps {
                 script {
                     try {
+                        sh "docker kill delivery-service"
                         sh "docker rm delivery-service"
-
                         sh "docker rmi delivery-service"
 
 
