--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,6 +25,7 @@ pipeline {
         stage('build image') {
             steps {
                 script {
+                    echo "building image with mongo ${MONGODB_URI}"
                     // Start the application within the running container
                     sh "touch .env && echo DATABASE_URL=${MONGODB_URI} >> .env"
                     sh "docker build -t delivery-service ."
